--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
+    "promise-mysql": "^5.2.0",
     "save": "^2.5.0"
   }
 }
