--- a/package.json
+++ b/package.json
@@ -17,12 +17,8 @@
   },
   "homepage": "https://github.com/guieg/SGC#readme",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
-    "promise-mysql": "^5.2.0",
-    "save": "^2.5.0"
+    "sync-mysql": "^3.0.1"
   }
 }
