--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
 
   api:
     build: .
+    depends_on:
+      - mysql
     ports:
       - "${SGC_API_PORT}:${SGC_API_PORT}"
     environment:
@@ -22,6 +24,7 @@ services:
       - "MYSQL_USER=${MYSQL_USER}"
       - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
       - "MYSQL_DB=${MYSQL_DB}"
-      - "MYSQL_PORT:${MYSQL_PORT}"
+      - "MYSQL_PORT=${MYSQL_PORT}"
+      - "SECRET=${SECRET}"
 
 
